--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-show-more": "^2.0.0",
+    "react-truncate": "^2.4.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8"
   },
