--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-show-more": "^2.0.0",
     "react-truncate": "^2.4.0",
     "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
